--- a/playlist/src/main/resources/application.properties
+++ b/playlist/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.jpa.hibernate.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.username=root
+spring.datasource.password=Gnanesh143@
+spring.liquibase.change-log=classpath:db/changelog/liquibase-changelog.xml
 
+server.port=9090
+spring.liquibase.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/Mysongs?createDatabaseIfNotExist=true
+
+
+
+# Cloudinary configuration
+cloudinary.cloudName=dwvzgfeyd
+cloudinary.apiKey=145956373718475
+cloudinary.apiSecret=aPNMdRqAQrA2MM8Hk48D0gNnNao
